--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@
       <nav class="navbar">
         <a href="#" class="logo">
           <!-- Replace with your logo image -->
-          <img src="Hawk Node while bg.jpg/40x40" alt="HawkNode Logo">
+          <img src="Hawk Node while bg.jpg" alt="HawkNode Logo">
           <span>HawkNode</span>
         </a>
         <div class="hamburger">
