--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
     }
     
     .footer-logo span {
-      color: var(--primary);
+      color: rgb(250, 252, 255);
     }
     
     .footer-about p {
@@ -1147,13 +1147,13 @@
       <div class="footer-content">
         <div class="footer-about">
           <div class="footer-logo">
-            <span>HawkNode</span>
+            <span>Hawk-Node</span>
           </div>
           <p>Leading provider of industrial automation solutions with a focus on innovation, reliability, and customer success.</p>
           <div class="social-links">
             <!--<a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>-->
             <!--<a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>-->
-            <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://linkedin.com/company/hawk-node/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
              <!--<a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>-->
           </div>
         </div>
