--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
     }
     
     .logo img {
-      height: 80px;
-      width: 80px;
+      height: 40px;
+      width: 40px;
       margin-right: 10px;
     }
     
@@ -790,7 +790,7 @@
         <a href="#" class="logo">
           <!-- Replace with your logo image -->
           <img src="HawkNodeWhiteLogo.jpg">
-          <span>Hawk-Node</span>
+          <span></span>
         </a>
         <div class="hamburger">
           <i class="fas fa-bars"></i>
