--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
     
     .logo {
       text-transform: uppercase;
-      font-size: 20px;
+      font-size: 16px;
       font-weight: 700;
-      color: var(--dark);
+      color: #545454;
       display: flex;
       align-items: center;
     }
@@ -789,7 +789,7 @@
       <nav class="navbar">
         <a href="#" class="logo">
           <!-- Replace with your logo image -->
-          <img src="HawkNodeWhiteLogo.jpg">
+          <img src="HawkNodeLogo.jpg">
           <span></span>
         </a>
         <div class="hamburger">
