--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       font-weight: 700;
       color: #545454;
       display: flex;
-      align-items: center;
+      align-items: left;
     }
     
     .logo img {
