--- a/index.html
+++ b/index.html
@@ -790,7 +790,7 @@
         <a href="#" class="logo">
           <!-- Replace with your logo image -->
           <img src="HawkNodeLogo.jpg">
-          <span>Hawk-Node</span>
+          <span></span>
         </a>
         <div class="hamburger">
           <i class="fas fa-bars"></i>
