--- a/index.html
+++ b/index.html
@@ -789,7 +789,7 @@
       <nav class="navbar">
         <a href="#" class="logo">
           <!-- Replace with your logo image -->
-          <img src="3.PNG">
+          <img src="HawkNodeRedLogo.PNG">
           <span></span>
         </a>
         <div class="hamburger">
