--- a/index.html
+++ b/index.html
@@ -1447,7 +1447,7 @@
       <nav class="navbar">
         <a href="#" class="logo">
           <!-- Replace with your logo image -->
-          <img src="HawkNodeRedLogo.PNG">
+          <img src="Take a look at my Canva design!(8).jpg">
           <span></span>
         </a>
         <div class="hamburger">
@@ -2042,3 +2042,4 @@
   </script>
 </body>
 </html>
+
