--- a/index.html
+++ b/index.html
@@ -1429,7 +1429,7 @@
       <nav class="navbar">
         <a href="#" class="logo">
           <!-- Replace with your logo image -->
-          <img src="HawkNodeRedLogo.PNG">
+          <img src="Logo.PNG">
           <span></span>
         </a>
         <div class="hamburger" id="hamburger">
@@ -2004,3 +2004,4 @@
   </script>
 </body>
 </html>
+
